--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -20,7 +20,7 @@
     <color name="omni_color3">#80eeeeee</color>
 <!--    <color name="omni_color1">@*android:color/primary_dark_device_default_light</color> -->
     <color name="omni_color2">@*android:color/primary_dark_device_default_settings</color>
-    <color name="omni_color1">@*android:color/primary_device_default_settings</color>
+    <color name="omni_color1">@*android:color/primary_dark_device_default_dark</color>
     <color name="omni_color7">@*android:color/background_floating_device_default_dark</color>
     <color name="omni_text1">#ffffffff</color>
     <color name="omni_text2">#ffeeeeee</color>
@@ -32,7 +32,7 @@
 
     <!-- Conversation list -->
     <color name="conversation_list_item_read">@color/omni_text2</color>
-    <color name="conversation_list_item_unread">@color/omni_text1</color>
+    <color name="conversation_list_item_unread">#ff9800</color>
     <color name="conversation_list_error">#fff45342</color>
     <color name="conversation_list_name">@color/omni_text1</color>
     <color name="conversation_list_details">@color/omni_text3</color>
@@ -120,7 +120,7 @@
 
     <color name="participant_list_text_primary">@color/omni_text1</color>
     <color name="people_and_options_header_text">@color/omni_text1</color>
-    <color name="people_and_options_list_divider">#222222</color>
+    <color name="people_and_options_list_divider">#00ffffff</color>
 
     <color name="fab_pressed_color">@color/omni_color3</color>
 
@@ -183,4 +183,3 @@
         <item>#595959</item>
     </array>
 </resources>
-
